hid some confidentiality things

--- a/src/app/core/misc/confidentiality/confidentiality.component.html
+++ b/src/app/core/misc/confidentiality/confidentiality.component.html
@@ -71,7 +71,7 @@
           cărora aceste date vor fi prelucrate, sunt următoarele:
         </p>
         <ul>
-          <li>Înregistrare cont pe site-ul <strong>{{ sensibleData.urlSite}} </strong></li>
+          <li>Înregistrare corent pe site-ul <strong>{{ sensibleData.urlSite}} </strong></li>
           <li>Înregistrare la evenimente (gratuite sau contra-cost)</li>
           <li>Abonare la Newsletter</li>
         </ul>
@@ -103,15 +103,15 @@
             Servicii de facturare – nume, prenume, adresa de e-mail, număr de
             telefon, adresă
           </li>
-          <li>
+          <!-- <li>
             Servicii de curierat/poștă – nume, prenume, adresa de e-mail, număr
             de telefon, adresă
           </li>
-          <li>Servicii de trimitere SMS – numărul de telefon</li>
-          <li>
+          <li>Servicii de trimitere SMS – numărul de telefon</li> -->
+          <!-- <li>
             Servicii de procesare plăți online – nume, prenume, adresa de
             e-mail, număr de telefon, adresă
-          </li>
+          </li> -->
           <li>Servicii de comentarii – nume, prenume, e-mail</li>
           <li>Servicii de contabilitate – nume, prenume, adresă, cnp</li>
           <li>Servicii juridice – nume, prenume, adresă, cnp</li>
